<resources>

    <string name="app_name">Encrypt !t</string>
    <string name="todoItemHint">Enter what to do.</string>
    <string name="todoItemContentDescription">Enter what to do here!!!!!</string>
    <string name="editor_hint">Enter what to do</string>
    <string name="createdTimeTitle">Created:</string>
    <string name="modifyTimeTitle">Modify:</string>
    <string name="fullDateTimeFormat">YY/MM/DD HH:MM:SS</string>
    <string name="rowEdit">Edit and detail</string>
    <string name="newItemDescription">New an item</string>
    <string name="passwordLabel">"Password: "</string>
    <string name="quit">Quit</string>
    <string name="login">Login</string>
    <string name="quitPrompt">Quit this application</string>
    <string name="menuChangePassword">Change Password</string>
    <string name="menuDeleteSelected">Delete Selected</string>
    <string name="menuEnterEditMode">Start Editing</string>
    <string name="menuEditDone">Editing Done</string>
    <string name="menuSelectAll">Select All</string>
    <string name="menuUnselectAll">Unselect All</string>
    <string name="menuSelectedCount">%d Selected</string>
    <string name="menuSelectReverse">Select Reverse</string>
    <string name="expandDescription">Show the detail</string>
    <string name="collapseDescription">Hide the detail</string>
    <string name="promptExit">Do you want to quit?</string>
    <string name="confirmDeleteSelected">Confirm to delete these items</string>
    <string name="confirmDeleteSelectedAgain">All these items to be deleted, and can not be restored.\r\nAre you sure to delete them?</string>
    <string name="searchLogsForward">Search forward</string>
    <string name="searchLogsBackword">Search Backward</string>
    <string name="searchLogToEnd">Reach to the end,\r\nwould you want to from the beginning?</string>
    <string name="searchLogToBegin">Reach to the beginning,\r\nwould you want to from the end?</string>
    <string name="searchLogNoFound">Target string not found!</string>
    <string name="descriptionDelete">Delete this item</string>
    <string name="prefLockAppTime">Time to lock the app</string>
    <string name="prefLockAppTimeSummary">How long in second before the app locked when it cannot be seen.</string>
    <string name="menuPreferences">Preferences</string>
    <string name="menuPreferencesDescription">Setting the preferences</string>
    <string name="prefLookAndFeel">Looking and Feeling</string>
    <string name="prefMainListExpandable">Main List Expandable</string>
    <string name="prefMainListExpandableDesc">Wether the items in the main list are expandable. The app must restart, before this setting takes affect.</string>
    <string name="prefLookAndFeelDesc">Set the looking and feeling of the app</string>
    <string name="prefAbout">About</string>
    <string name="prefAboutDesc">About this application</string>
    <string name="aboutInfo">Encrypt !t. Encrypt for you!!!</string>
    <string name="aboutCopyRight">by ZhengShangmin@yahoo.com</string>
    <string name="prefAdvancedForDev">Advanced Settings</string>
    <string name="prefAdvancedForDevDesc">Advanced settings. It is only for the developers.</string>
    <string name="prefAdvancedLogLevel">Log Level</string>
    <string name="prefAdvancedLogLevelDesc">The lowest level of the log to be recorded.</string>
    <string name="prefAdvancedLogChannels">Log channels</string>
    <string name="prefAdvancedLogChannelsDesc">Channels to which the logs will be sent. The Android channel will always opened, even it is not selected here. The change will take affect after the app restart.</string>
    <string name="call">Security Call</string>
    <string name="promptNoMessageToSend">No message to send, nothing to do</string>
    <string name="activityTitleDialerCall">Security Calling</string>
    <string name="activityTitleDialer">Security Dialer</string>
    <string name="activityTitleDialerMessage">Security Messager</string>
    <string name="promptSendMessageFail">Send the %1$d/%2$d part of message failed!</string>
    <string name="promptSendMessageOK">Send the %1$d/%2$d message OK</string>
    <string name="promptDeliverMessage">The %1$d/%2$d message is received</string>
    <string name="promptNoPhoneNumber">No phone number entered.</string>
    <string name="promptNoItemSelected">No item selected!</string>
    <string name="hintSecurityMessagePassword">The password to encode the message. Tell the recipient the password by other way.</string>
    <string name="hintSendMessage">Send the message. Encode it when the password is not empty.</string>
    <string name="hintCancel">Cancel</string>
    <string name="hintPhoneNumber">Enter the phone number</string>
    <string name="promptEncodeMessageFailed">Encode the message failed. It will not be sent out.</string>
    <string name="promptNoPasswordForMessage">No password to protect this message. Do you want to send it in plain text?</string>
    <string name="hintReciption">Click for phone number</string>
    <string name="menuBackup">Backup</string>
    <string name="menuBackupSecurity">Backup Security</string>
    <string name="menuRestoreSecurity">Restore Security</string>
    <string name="menuExport">Export</string>
    <string name="promptExport">The selected items will be exported in PLAIN text format. Any one, who can access the exported file, can read them.\nAre you sure to contine?</string>
    <string name="promptExportResult">Export to %1$s %2$s!</string>
    <string name="titleExportDlg">Exporting</string>
    <string name="succeed">Succeed</string>
    <string name="failed">Failed</string>
    <string name="cancelled">Cancelled</string>
    <string name="close">Close</string>
    <string name="menuImport">Import</string>
    <string name="promptImportResult">Import from %1$s %2$s!</string>
    <string name="titleImportDlg">Importing</string>
    <string name="promptParsingXml">Parsing line %1$d of the xml file&#8230;</string>
    <string name="prefTitleBackup">Backup</string>
    <string name="prefSummaryBackup">Backup and restore the items</string>
    <string name="prefSummaryBackXmlOn">Export items in XML format</string>
    <string name="prefSummaryBackXmlOff">Export items in plain TEXT format</string>
    <string name="prefTitleXml">Export the item in XML format</string>
    <string name="promptBackup">Backuping to %1$s &#8230;</string>
    <string name="promptBackupOk">Backup to the follows successfully: \r\n    %1$s</string>
    <string name="promptBackupFailed">Backup %1$s failed!</string>
    <string name="promptBackupCancelled">Backup is cancelled!</string>
    <string name="hintBackup">Backup the key and the Database.</string>
    <string name="hintBackupPassword">Password to protect the backuped</string>
    <string name="titleBackupPassword">Password: </string>
    <string name="titleBackupPasswordConfirm">Confirm: </string>
    <string name="hintBackupName">File name, without the extension, to store the backups. The application will add the extension</string>
    <string name="titleBackupName">File name: </string>
    <string name="hintBackupPath">Path in which to store the backups</string>
    <string name="titleBackupPath">Path: </string>
    <string name="titleBackupChoosePath">Choose</string>
    <string name="titleBackup">Backup</string>
    <string name="promptBackupPathEmpty">No backup path is chosen!</string>
    <string name="promptBackupNameEmpty">No backup file name is chosen!</string>
    <string name="promptBackupExist">The followings exist: %1$s.</string>
    <string name="overwrite">Overwrite</string>
    <string name="promptRestoreOverwrite">Restore will make the current items and password lost. It will not be able to recovery. The following reasons may make the items cannot be read after restore: \r\n 1. The key and the database are not matched;\r\n 2. The password of the key and the database is not corrected; \r\n 3. The password of the backuped files is no correct.\r\nAre you sure?</string>
    <string name="promptRestoreMissFile">The following source files missed, restore is cancelld: \r\n    %1$s</string>
    <string name="promptRestore">Restoring from %1$s &#8230;</string>
    <string name="promptRestoreOk">Restore from the follows successfully: \r\n    %1$s</string>
    <string name="promptRestoreFailed">Restore %1$s failed!</string>
    <string name="promptRestoreCancelled">Restore is cancelled!</string>
    <string name="hintRestore">Restore the key and the Database from the backup files.</string>
    <string name="titleRestore">Restore</string>
</resources>
