<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:id="@+id/menuGroupSelect">
        <item android:id="@+id/menuSelectAll"
			  android:title="@string/menuSelectAll"
			  android:titleCondensed="@string/menuSelectAll"
			  android:icon="@drawable/select"
			  android:showAsAction="always">
        </item>
        <item android:id="@+id/menuSelectedCount"
              android:title="@string/menuSelectedCount"
              android:showAsAction="always"
              android:enabled="true">
        </item>
    </group>
    <item android:id="@+id/menuMainEditMode"
          android:icon="@drawable/edit"
          android:showAsAction="ifRoom"
          android:title="@string/menuEnterEditMode">
    </item>
    <item android:id="@+id/menuSelectReverse"
		  android:title="@string/menuSelectReverse"
		  android:titleCondensed="@string/menuSelectReverse"
		  android:showAsAction="never">
    </item>
    <item android:id="@+id/menuPreferences"
          android:showAsAction="never"
          android:title="@string/menuPreferences"
          android:icon="@drawable/settings"
          android:titleCondensed="@string/app_name">
    </item>
    <item android:id="@+id/menuCall"
          android:title="@string/aboutCopyRight"
          android:titleCondensed="@string/app_name"
          android:icon="@drawable/phone"
          android:menuCategory="system"
          android:showAsAction="always"
          android:onClick="onSecurityCall">
    </item>
</menu>
