<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.zsm.encryptIt"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/defaultPadding" >

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelReciptient"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewReciptient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@+id/textViewReciptient"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imageViewPickPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/hintPhoneNumber"
            android:onClick="onNumber"
            android:src="@drawable/phone" />

    </LinearLayout>

    <com.zsm.encryptIt.ui.VisiblePassword
        android:id="@+id/visiblePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:contentDescription="@string/hintSecurityMessagePassword"
        custom:labelText="@string/passwordLabel" >

    </com.zsm.encryptIt.ui.VisiblePassword>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <ImageView
            android:id="@+id/imageViewCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/hintCancel"
            android:onClick="onCancel"
            android:src="@drawable/reject" />

        <ImageView
            android:id="@+id/imageViewOK"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/hintSendMessage"
            android:onClick="onSend"
            android:src="@drawable/accept" />

    </LinearLayout>

</LinearLayout>